k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  # Change this if you want a different namespace name.
  name: loadgen
  labels:
    app.kubernetes.io/name: loadgen
